Revision history for Ocsinventory::Agent

       * Customize SNMP scans using a special XML format received from server 
       * Getting network devices MAC address during SNMP scans
       * Availibity to scan any networks SNMP devices using nmap or ping scans
       * SNMP v3 available for SNMP scans
       * Add new --ssl configuration option to enable or disable certificate check during SSL communications
       * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
       * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Solving CPU and memories inventory detection under MacOSX Snow Leopard and MacOSX Lion
       * Modifying MacOSX backend files to use the new Mac::Sysprole Perl module version
       * Fix Bug #887534 about invalid CREATEDATE in lib/Ocsinventory/Agent/Backend/OS/Linux/Drives.pm

2.0.3
       * Fix Bug #881406 about security issue due to snmp_com.txt file which is no longer used
       * Fix Bug #874269 about wrong conversion if hard drive >= TB in MacOS/Storages.pm
       * Fix Bug #879487 about a misplaced object release in ocs_agent_configPane.m
    
2.0.2
       * Fix bug on "Debug Mode" checkbox in MacoSX installer
       * Fix bug while sending ERR_DOWNLOAD_INFO message in Donwload.pm
       * Fix Bug #856161 about installer problems on MacOSX Tiger

2.0.1
       * New SNMP data using If_Mib.pm: IP address, netmask, gateway and routing informations
       * Use the "public" SNMP community if no community defined in OCS server configuration
       * Various bug fixes in Snmp.pm
       * New 2.0 MacOSX integration
       * Bug #798428 about standalone agent building
       * Change variable names to lowercase in Snmp/3375.pm
       * Fix a closedir omission in Solaris/Packages.pm
       * Modify releases tarball name when building it using make dist command