@@ -42,6 +42,11 @@ PREREQUISITES
         information http://wiki.mandriva.com/en/Tools/monitor-edid
       - get-edid from the read-edid package
 
+    To get SSL communications working (for packages deployment or HTTPS communications to 
+    OCS server), you need these modules:
+      - Crypt::SSLeay if you use LWP prior to version 6
+      - LWP::Protocol::https if you use LWP version 6 or more
+
     If available, Net::CUPS is used to detect the printer
 
     Net::SNMP to scan network devices using SNMP    
