@@ -35,6 +35,7 @@ my $default = {
   'backendCollectTimeout'   => '600',   # timeOut of process : see Backend.pm
   'scanhomedirs' => 0,
   'ssl' => 1,
+  'ca' => '',
 
   # Other values that can't be changed with the
   # CLI parameters
@@ -136,6 +137,8 @@ sub loadUserParams {
 		"delaytime"       =>   \$self->{config}{delaytime},
 		"scan-homedirs"   =>   \$self->{config}{scanhomedirs},
 		"nolocal"        =>   \$self->{config}{nolocal},
+		"ssl=s"            =>   \$self->{config}{ssl},
+		"ca=s"            =>   \$self->{config}{ca},
 	);
 
 	$self->help() if (!GetOptions(%options) || $self->{config}{help});
@@ -185,6 +188,8 @@ sub help {
   print STDERR "\t--nosoftware        do not return installed software list (".$self->{config}{nosoftware}.")\n";
   print STDERR "\t--delaytime	      set a max delay time (in second) if no PROLOG_FREQ is set (".$self->{config}{delaytime}.")\n";
   print STDERR "\t--scan-homedirs     permit to scan home user directories (".$self->{config}{scanhomedirs}.")\n" ;
+  print STDERR "\t--ssl=0|1           disable or enable SSL communications check\n" ;
+  print STDERR "\t--ca=FILE           path to CA certificate chain file in PEM format\n" ;
 
   print STDERR "\n";
   print STDERR "Manpage:\n";
